[gd_scene load_steps=3 format=3 uid="uid://cmqvpjk11wrks"]

[ext_resource type="Script" path="res://input/gamepad_cursor.gd" id="1_75ohs"]
[ext_resource type="Script" path="res://scenes/test_level.gd" id="1_p4puh"]

[node name="TestLevel" type="Node3D"]
script = ExtResource("1_p4puh")

[node name="GamepadCursor" type="Node2D" parent="."]
script = ExtResource("1_75ohs")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ButtonNewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "New Game"

[node name="ButtonCustomCursor" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Has Custom Cursor"

[node name="ButtonExit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Exit
"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
text = "Adding lots of text here. 
More text
and more text
and more text.
So much text that we 
can keep scrolling
and scrolling
and scrolling.

If you can see this, then you have scrolled to the bottom."

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonCustomCursor" to="." method="_on_button_custom_cursor_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
